# hacs_napoleon_home

./: .gitignore  README.md  hacs.json  info.md  pyproject.toml  requirements-dev.txt
.github/workflows/: lint.yml  test.yml  validate.yml
custom_components/napoleon/: __init__.py  config_flow.py  const.py  coordinator.py  manifest.json  sensor.py  strings.json
custom_components/napoleon/api/: auth.py  rest.py
custom_components/napoleon/tests/: conftest.py  test_auth.py  test_config_flow.py  test_placeholder.py  test_regions.py  test_rest.py
custom_components/napoleon/tests/fixtures/: rest_properties.json
custom_components/napoleon_efire/: manifest.json  regions.py  sensor.py  strings.json
custom_components/napoleon_efire/api/: __init__.py  rest.py
custom_components/napoleon_efire/tests/: test_auth.py  test_config_flow.py  test_placeholder.py  test_regions.py  test_rest.py
custom_components/napoleon_efire/tests/fixtures/: __init__.py  rest_devices.json
docs/plans/: 2026-04-20-napoleon-ha-integration-design.md  2026-04-20-napoleon-ha-integration-plan.md
